--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aqui va algo del post</h1>
-    <h2>y algo mas</h2>
     
+    <div id="container">
+         <h1>Aqui va el titulo atractivo del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+        
+    </div>
 </body>
 </html>
