--- a/blogpost.html
+++ b/blogpost.html
@@ -10,8 +10,9 @@
 <body>
     
     <div id="container">
-        <div id="cabedera">
-            Cabecera
+        <div id="cabecera">
+            HyperBlog
+            <span id="tagline">Tu Blog de confianza</span>
         </div>
             <div id="post">
                 
