--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <div id="container">
          <h1>Aqui va el titulo atractivo del post</h1>
         <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-        
+        <p>Los blogs son la mejor forma de compartir informacion y tus ideas</p>
     </div>
 </body>
 </html>
