--- a/blogpost.html
+++ b/blogpost.html
@@ -12,13 +12,13 @@
     <div id="container">
         <div id="cabecera">
             HyperBlog
-            <span id="tagline">Tu Blog de confianza</span>
+            <span id="tagline">Tu Blog de master</span>
         </div>
         <h1>Aqui va el titulo atractivo del post</h1>
         <div id="post">
            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
            <p>Los blogs son la mejor forma de compartir informacion y tus ideas</p>
-                
+            <p>Suscribete y dale like</p>
             </div>
     </div>
 </body>
