--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
             HyperBlog
             <span id="tagline">Tu Blog de cabecera</span>
         </div>
-        <h1>Aqui va el titulo atractivo del post</h1>
+        <h1>Hyperblog</h1>
         <div id="post">
            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
            <p>Los blogs son la mejor forma de compartir informacion y tus ideas</p>
